--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
-    "gulp-uglify-es": "^1.0.4"
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify-es": "^1.0.4",
+    "node-sass": "^4.12.0"
   },
   "dependencies": {}
 }
